--- a/1.html
+++ b/1.html
@@ -84,6 +84,7 @@
           <ul>
             <h1 class="display-3" id="1"><u>Szakmai tapasztalat</u></h1>
             <ul>
+              <li><p class = "h1">Váci Szakképzési Centrum Petőfi Sándor Műszaki Technikum, Gimnázium és Kollégium</p><ol><h2>2170 Aszód, Hatvani út 3.</h2><h2>Óraadó Tanár Programozás témakörében</h2></ol></li>
               <li><p class="h1">GE Aviation Hungary Kft.</p><ol><h2>2112 Veresegyház, Lévai utca 33.</h2><h2>Diákmunka</h2><h2>Repülőgép hajtómű alkatrészek válogatása, mozgatása, csomagolása</h2></ol></li>
               <li><p class="h1">Art Prestant Orgonaépítő Kft.</p><ol><h2>3065 Pásztó, Kékesi út 36.</h2><h2>Önkéntes munka</h2></ol></li>
             </ul>
