--- a/6.html
+++ b/6.html
@@ -47,14 +47,14 @@
   <div class="tabla">
     <br><br><br><br><br><br>
     <table>
-      <tr class="sor"><th class="feher"><div class="szoveg">H1</th><th class="fekete"><div class="szoveg">H1</th><th class="feher">F1</th><th class="fekete">E1</th><th class="feher">D1</th><th class="fekete">C1</th><th class="feher">B1</th><th class="fekete">A1</th></tr>
-      <tr class="sor"><th class="fekete"><div class="szoveg">H2</th><th class="feher"><div class="szoveg">H2</th><th class="fekete">F2</th><th class="feher">E2</th><th class="fekete">D2</th><th class="feher">C2</th><th class="fekete">B2</th><th class="feher">A2</th></tr>
-      <tr class="sor"><th class="feher"><div class="szoveg">H3</th><th class="fekete"><div class="szoveg">H3</th><th class="feher">F3</th><th class="fekete">E3</th><th class="feher">D3</th><th class="fekete">C3</th><th class="feher">B3</th><th class="fekete">A3</th></tr>
-      <tr class="sor"><th class="fekete"><div class="szoveg">H4</th><th class="feher"><div class="szoveg">H4</th><th class="fekete">F4</th><th class="feher">E4</th><th class="fekete">D4</th><th class="feher">C4</th><th class="fekete">B4</th><th class="feher">A4</th></tr>
-      <tr class="sor"><th class="feher"><div class="szoveg">H5</th><th class="fekete"><div class="szoveg">H5</th><th class="feher">F5</th><th class="fekete">E5</th><th class="feher">D5</th><th class="fekete">C5</th><th class="feher">B5</th><th class="fekete">A5</th></tr>
-      <tr class="sor"><th class="fekete"><div class="szoveg">H6</th><th class="feher"><div class="szoveg">H6</th><th class="fekete">F6</th><th class="feher">E6</th><th class="fekete">D6</th><th class="feher">C6</th><th class="fekete">B6</th><th class="feher">A6</th></tr>
-      <tr class="sor"><th class="feher"><div class="szoveg">H7</th><th class="fekete"><div class="szoveg">H7</th><th class="feher">F7</th><th class="fekete">E7</th><th class="feher">D7</th><th class="fekete">C7</th><th class="feher">B7</th><th class="fekete">A7</th></tr>
-      <tr class="sor"><th class="fekete"><div class="szoveg">H8</th><th class="feher"><div class="szoveg">H8</th><th class="fekete">F8</th><th class="feher">E8</th><th class="fekete">D8</th><th class="feher">C8</th><th class="fekete">B8</th><th class="feher">A8</th></tr>
+      <tr class="sor"><th class="feher"><div class="szoveg">H1</th><th class="fekete"><div class="szoveg">G1</th><th class="feher">F1</th><th class="fekete">E1</th><th class="feher">D1</th><th class="fekete">C1</th><th class="feher">B1</th><th class="fekete">A1</th></tr>
+      <tr class="sor"><th class="fekete"><div class="szoveg">H2</th><th class="feher"><div class="szoveg">G2</th><th class="fekete">F2</th><th class="feher">E2</th><th class="fekete">D2</th><th class="feher">C2</th><th class="fekete">B2</th><th class="feher">A2</th></tr>
+      <tr class="sor"><th class="feher"><div class="szoveg">H3</th><th class="fekete"><div class="szoveg">G3</th><th class="feher">F3</th><th class="fekete">E3</th><th class="feher">D3</th><th class="fekete">C3</th><th class="feher">B3</th><th class="fekete">A3</th></tr>
+      <tr class="sor"><th class="fekete"><div class="szoveg">H4</th><th class="feher"><div class="szoveg">G4</th><th class="fekete">F4</th><th class="feher">E4</th><th class="fekete">D4</th><th class="feher">C4</th><th class="fekete">B4</th><th class="feher">A4</th></tr>
+      <tr class="sor"><th class="feher"><div class="szoveg">H5</th><th class="fekete"><div class="szoveg">G5</th><th class="feher">F5</th><th class="fekete">E5</th><th class="feher">D5</th><th class="fekete">C5</th><th class="feher">B5</th><th class="fekete">A5</th></tr>
+      <tr class="sor"><th class="fekete"><div class="szoveg">H6</th><th class="feher"><div class="szoveg">G6</th><th class="fekete">F6</th><th class="feher">E6</th><th class="fekete">D6</th><th class="feher">C6</th><th class="fekete">B6</th><th class="feher">A6</th></tr>
+      <tr class="sor"><th class="feher"><div class="szoveg">H7</th><th class="fekete"><div class="szoveg">G7</th><th class="feher">F7</th><th class="fekete">E7</th><th class="feher">D7</th><th class="fekete">C7</th><th class="feher">B7</th><th class="fekete">A7</th></tr>
+      <tr class="sor"><th class="fekete"><div class="szoveg">H8</th><th class="feher"><div class="szoveg">G8</th><th class="fekete">F8</th><th class="feher">E8</th><th class="fekete">D8</th><th class="feher">C8</th><th class="fekete">B8</th><th class="feher">A8</th></tr>
     </table>
   </div>
 </body>
